[metadata]
name = botterino
version = 0.1.6
author = itoxici
author_email = itox@picturegame.co
description = Automate posting and hosting of rounds on /r/picturegame
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pgitox/botterino
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires=
    praw
    geopy
    pyyaml
    ruamel.yaml
    sty
    requests
    update_checker
    halo